2009-06-15  Thomas Moulard  <thomas.moulard@gmail.com>

	Fix distribution.
	* include/Makefile.am: Distribute identity-function.hh.
	* tests/Makefile.am: Remove freeze.stdout and
	add identity-function.stdout.

2009-06-13  Thomas Moulard  <thomas.moulard@gmail.com>

	Implement identity function.
	* include/roboptim/core/identity-function.hh: New.
	* src/Makefile.am: Add new source.
	* src/identity-function.cc: New.
	* tests/Makefile.am: Compile new test.
	* tests/identity-function.cc: New.
	* tests/identity-function.stdout: New.
	* tests/testsuite.at: Run new test case.

2009-06-12  Thomas Moulard  <thomas.moulard@gmail.com>

	Remove Freeze function.
	* include/Makefile.am: Remove freeze.hh from list.
	* include/roboptim/core/freeze.hh: Remove.
	* src/Makefile.am: Remove freeze.cc from list.
	* src/freeze.cc: Remove.
	* tests/Makefile.am: Remove test.
	* tests/freeze.cc: Remove.
	* tests/freeze.stdout: Remove.
	* tests/testsuite.at: Remove test.

2009-06-10  Thomas Moulard  <thomas.moulard@gmail.com>

	Synchronize.
	* doc/sf-upload.sh.in: Here.

2009-06-10  Thomas Moulard  <thomas.moulard@gmail.com>

	Synchronize.
	* doc/sf-upload.sh.in: Here.

2009-06-10  Thomas Moulard  <thomas.moulard@gmail.com>

	Use new pkg-config rules.
	* Makefile.am: Here.

2009-06-10  Thomas Moulard  <thomas.moulard@gmail.com>

	Synchronize with share.
	* doc/Makefile.am,
	* doc/sf-upload.sh.in: Synchronize.

2009-06-10  Thomas Moulard  <thomas.moulard@gmail.com>

	Synhronize with share.
	* build-aux/doxygen.m4: New.
	* build-aux/pkg-config.mk: New.
	* build-aux/pkg-config.pc.in: Synchronize.
	* build-aux/roboptim-core.m4: New.
	* configure.ac: Update to use new rules.
	* doc/Doxyfile.in,
	* doc/Makefile.am,
	* doc/sf-upload.sh.in: Synchronize.

2009-06-08  Thomas Moulard  <thomas.moulard@gmail.com>

	Fix compilation warning.
	* include/roboptim/core/generic-solver.hh:
	Return a dummy value in impossible case.

2009-06-08  Thomas Moulard  <thomas.moulard@gmail.com>
