@@ -17,13 +17,15 @@
 
 #include <iostream>
 
+#include <boost/mpl/vector.hpp>
+
 #include "common.hh"
 #include <roboptim/core/solver-factory.hh>
 
 using namespace roboptim;
 
 // Specify the solver that will be used.
-typedef Solver<Function, const Function*> solver_t;
+typedef Solver<Function, boost::mpl::vector<Function> > solver_t;
 
 // Define a simple function.
 struct F : public Function
