@@ -16,6 +16,7 @@
 // along with roboptim.  If not, see <http://www.gnu.org/licenses/>.
 
 #include <iostream>
+#include <boost/make_shared.hpp>
 
 #include "common.hh"
 #include <roboptim/core/plugin/dummy.hh>
@@ -73,8 +74,8 @@ int run_test ()
 	  && pb.argumentScales ()[2] == 1.
 	  && pb.argumentScales ()[3] == 1.);
 
-  F f3;
-  pb.addConstraint (&f3, Function::makeInterval (0., 5.), 3.5);
+  pb.addConstraint (boost::make_shared<F> (),
+		    Function::makeInterval (0., 5.), 3.5);
   assert (pb.constraints ().size () == 1);
   assert (&pb.constraints ()[0] != 0);
   assert (pb.bounds ().size () == 1);
